--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MviDemo</string>
+
+    <string name="main_title">Main Title</string>
+    <string name="detail_title">Detail Title</string>
 </resources>
